背景色などのCSS要素を変更。html要素の並びをプロトタイプ版に近くなるよう変更

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/sal.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
-    <title>まにまに展 - ManiMani|宮城大学 デザインポータル</title>
+    <title>、と。展 - ManiMani|宮城大学 デザインポータル</title>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/FLAutoKerning.js"></script>
     <script src="js/rellax.min.js"></script>
@@ -29,17 +29,8 @@
 <body onload="init()">
 
     <body>
-        <header>
-            <!-- <iframe src="p5/index.html" frameborder="none"></iframe> -->
-            <div class="mainbox nopadding">
-                <div class="wrapper">
-                    <img src="img/title.png">
-                </div>
-            </div>
-        </header>
-
         <main>
-            <div class="mainbox bg_yellow" id="abstract">
+            <div class="mainbox" id="abstract">
                 <div class="wrapper">
                     <h2 class="font_bold">、と。展 (くとうてん)</h2>
 
@@ -65,14 +56,10 @@
                 </div>
             </div>
 
-            <div class="mainbox wrap nopadding" data-sal="fade" data-sal-duration="400" data-sal-delay="30" id="imagegallery">
-                <div class="clm3"><img src="img/1.jpg"></div>
-                <div class="clm3"><img src="img/2.jpg"></div>
-                <div class="clm3"><img src="img/3.jpg"></div>
-                <div class="clm3"><img src="img/4.jpg"></div>
-                <div class="clm3"><img src="img/5.jpg"></div>
-                <div class="clm3"><img src="img/6.jpg"></div>
-
+            <div class="mainbox">
+                <div class="wrapper">
+                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/6T0Q_O6TTsM?si=XHAhh-yaG6BUV2bL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
             </div>
 
             <div class="mainbox_large" data-sal="slide-up" data-sal-duration="400" data-sal-delay="30" id="works">
@@ -117,7 +104,7 @@
                 </div>
             </div>
 
-            <div class="mainbox bg_yellow" data-sal="slide-up" data-sal-duration="400" data-sal-delay="30" id="access">
+            <div class="mainbox bg_aquamarine" data-sal="slide-up" data-sal-duration="400" data-sal-delay="30" id="access">
                 <div class="wrapper">
                     <h2 class="font_bold">アクセス</h2>
                     <div class="wrapper_exptitle">
@@ -129,7 +116,7 @@
                             <p class="text_S">JR古川駅より徒歩約15分</p>
                             <p class="text_S">仙台〜古川高速バス 最寄りのバス停</p>
                             <p class="text_S">JRバス：古川十日町(徒歩5分)</p>
-                            <p class="text_S">宮城交通：七日町（徒歩3分)</p>
+                            <p class="text_S">宮城交通：七日町(徒歩3分)</p>
                         </div>
 
                         <div class="clm2_right">
