要素の並び順を変更。本素材が来ていない部分に仮素材を配置

--- a/index.html
+++ b/index.html
@@ -1,154 +1,166 @@
 <!DOCTYPE html>
 <html lang="ja">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/sal.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-        crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/sal.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+      crossorigin="anonymous"
+    />
     <title>、と。展 - ManiMani|宮城大学 デザインポータル</title>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/FLAutoKerning.js"></script>
     <script src="js/rellax.min.js"></script>
     <script language="javascript">
-        function init() {
-            FLAutoKerning.process($('h1'), FLAutoKerning.DEFAULT_KERNING_INFO);
-            FLAutoKerning.process($('h2'), FLAutoKerning.DEFAULT_KERNING_INFO);
-            FLAutoKerning.process($('a'), FLAutoKerning.DEFAULT_KERNING_INFO);
-            FLAutoKerning.process($('p'), FLAutoKerning.DEFAULT_KERNING_INFO);
-            FLAutoKerning.process($('li'), FLAutoKerning.DEFAULT_KERNING_INFO);
-        }
+      function init() {
+        FLAutoKerning.process($("h1"), FLAutoKerning.DEFAULT_KERNING_INFO);
+        FLAutoKerning.process($("h2"), FLAutoKerning.DEFAULT_KERNING_INFO);
+        FLAutoKerning.process($("a"), FLAutoKerning.DEFAULT_KERNING_INFO);
+        FLAutoKerning.process($("p"), FLAutoKerning.DEFAULT_KERNING_INFO);
+        FLAutoKerning.process($("li"), FLAutoKerning.DEFAULT_KERNING_INFO);
+      }
     </script>
-</head>
+  </head>
 
-<body onload="init()">
-
+  <body onload="init()">
     <body>
-        <main>
-            <div class="mainbox" id="abstract">
-                <div class="wrapper">
-                    <h2 class="font_bold">、と。展 (くとうてん)</h2>
+      <main>
+        <div class="mainbox" id="abstract">
+          <div class="wrapper">
+            <h2 class="font_bold">、と。展 (くとうてん)</h2>
 
-                    <div class="wrapper_exptitle">
-                        <div class="clm2_left">
-                            <ul>
-                                <li class="text_bold text_S">期間: 2024年2月21日(水)~2月25日(日)</li>
-                                <li class="text_bold text_S">時間: 10:00~17:00/会期中無休/閲覧無料</li>
-                                <li class="text_bold text_S">場所: 大崎市民ギャラリー「緒絶の館」</li>
-                            </ul>
+            <div class="wrapper_exptitle">
+              <div class="clm2_left">
+                <ul>
+                  <li class="text_bold text_S">
+                    期間: 2024年2月21日(水)~2月25日(日)
+                  </li>
+                  <li class="text_bold text_S">
+                    時間: 10:00~17:00/会期中無休/閲覧無料
+                  </li>
+                  <li class="text_bold text_S">
+                    場所: 大崎市民ギャラリー「緒絶の館」
+                  </li>
+                </ul>
 
-                            <p class="text_justify text_S">
-                                2023年度開催の「ゆらめくあわい」に引き続き、今年度も大崎市と宮城大学の連携協力事業、「、と。展」を開催します。<br>
-                                価値創造デザイン学類の学生が考案・制作した体験型メディアアートを、大崎市民ギャラリー「緒絶の館」に展示します。展示のテーマは、『人も、時間も、モノも、ちょっと止まってひとやすみ』。
-                            </p>
-                        </div>
+                <p class="text_justify text_S">
+                  2023年度開催の「ゆらめくあわい」に引き続き、今年度も大崎市と宮城大学の連携協力事業、「、と。展」を開催します。<br />
+                  価値創造デザイン学類の学生が考案・制作した体験型メディアアートを、大崎市民ギャラリー「緒絶の館」に展示します。展示のテーマは、『人も、時間も、モノも、ちょっと止まってひとやすみ』。
+                </p>
+              </div>
 
-                        <div class="clm2_right">
-                            <a href="pdf/poster.pdf"><img src="img/poster.jpg"></a>
-                            <a href="pdf/poster.pdf" class="text_bold">Download<i class="fas fa-external-link-alt"></i></a>
-                        </div>
-                    </div>
+              <div class="clm2_right">
+                <a href="pdf/poster.pdf"><img src="img/poster.jpg" /></a>
+                <a href="pdf/poster.pdf" class="text_bold"
+                  >Download<i class="fas fa-external-link-alt"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="mainbox">
+          <div class="wrapper">
+            <h2>テスト用に中村の動画を埋め込み</h2>
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube-nocookie.com/embed/6T0Q_O6TTsM?si=XHAhh-yaG6BUV2bL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+
+        <div
+          class="mainbox_large"
+          data-sal="slide-up"
+          data-sal-duration="400"
+          data-sal-delay="30"
+          id="works"
+        >
+          <div class="wrapper">
+            <h2 class="font_bold">展示作品</h2>
+            <p>ここに会場マップを入れる</p>
+            <div class="wrapper_exptitle"></div>
+          </div>
+        </div>
+
+        <div
+          class="mainbox wrap nopadding"
+          data-sal="fade"
+          data-sal-duration="400"
+          data-sal-delay="30"
+          id="imagegallery"
+        >
+          <div class="clm3"><img src="img/7.jpg" /></div>
+          <div class="clm3"><img src="img/8.jpg" /></div>
+          <div class="clm3"><img src="img/9.jpg" /></div>
+          <div class="clm3"><img src="img/10.jpg" /></div>
+          <div class="clm3"><img src="img/11.jpg" /></div>
+          <div class="clm3"><img src="img/12.jpg" /></div>
+        </div>
+
+        <div
+          class="mainbox bg_aquamarine"
+          data-sal="slide-up"
+          data-sal-duration="400"
+          data-sal-delay="30"
+          id="access"
+        >
+          <div class="wrapper">
+            <h2 class="font_bold">アクセス</h2>
+            <div class="wrapper_exptitle">
+              <div class="clm2_left">
+                <p class="text_bold text_S">大崎市民ギャラリー「緒絶の館」</p>
+                <p class="text_bold text_S">
+                  〒989-6154 宮城県大崎市古川三日町1-1-1
+                </p>
+                <p class="text_bold text_S">TEL 0229-21-1466</p>
+                <p class="text_S">古川ＩCより車で約10分</p>
+                <p class="text_S">JR古川駅より徒歩約15分</p>
+                <p class="text_S">仙台〜古川高速バス 最寄りのバス停</p>
+                <p class="text_S">JRバス：古川十日町(徒歩5分)</p>
+                <p class="text_S">宮城交通：七日町(徒歩3分)</p>
+              </div>
+
+              <div class="clm2_right">
+                <div class="ggmap">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3119.1808108402943!2d140.95299481534093!3d38.575683879621536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f8912bb59f77473%3A0x23db873ba87de3bf!2z44CSOTg5LTYxNTQgTWl5YWdpLWtlbiwgxYxzYWtpLXNoaSwgRnVydWthd2FtaWtrYW1hY2hpLCAxIENob21l4oiSMeKIkjEg5aSn5bSO5biC5rCR44Ku44Oj44Op44Oq44O8!5e0!3m2!1sen!2sjp!4v1548164526624"
+                    width="300"
+                    height="200"
+                    frameborder="0"
+                    style="border: 0"
+                    allowfullscreen
+                  ></iframe>
                 </div>
+              </div>
             </div>
+          </div>
+        </div>
+      </main>
 
-            <div class="mainbox">
-                <div class="wrapper">
-                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/6T0Q_O6TTsM?si=XHAhh-yaG6BUV2bL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </div>
-            </div>
-
-            <div class="mainbox_large" data-sal="slide-up" data-sal-duration="400" data-sal-delay="30" id="works">
-                <div class="wrapper">
-                    <h2 class="font_bold">展示作品</h2>
-                    <div class="wrapper_exptitle">
-                        <div class="clm3">
-                            <a href="img/pop-control.png"  data-fancybox="gallery"><img src="img/panel-noImage.png"></a>
-                            <p class="text_S text_bold">人名/人名/人名/人名/</p>
-                        </div>
-
-                        <div class="clm3">
-                            <a href="img/pop-color.png"  data-fancybox="gallery"><img src="img/panel-noImage.png"></a>
-                            <p class="text_S text_bold">人名/人名/人名/人名/</p>
-                        </div>
-
-                        <div class="clm3">
-                            <a href="img/pop-link.png"  data-fancybox="gallery"><img src="img/panel-noImage.png"></a>
-                            <p class="text_S text_bold">人名/人名/人名/人名/</p>
-                        </div>
-
-                        <div class="clm3">
-                            <a href="img/pop-memory.png"  data-fancybox="gallery"><img src="img/panel-noImage.png"></a>
-                            <p class="text_S text_bold">人名/人名/人名/人名/</p>
-                        </div>
-
-                        <div class="clm3">
-                            <a href="img/pop-blow.png"  data-fancybox="gallery"><img src="img/panel-noImage.png"></a>
-                            <p class="text_S text_bold">人名/人名/人名/人名/</p>
-                        </div>
-
-                        <div class="clm3">
-                            <a href="img/pop-blow.png" data-fancybox="gallery"><img src="img/panel-noImage.png"></a>
-                            <p class="text_S text_bold">人名/人名/人名/人名/</p>
-                        </div>
-
-                        <div class="clm3">
-                            <a href="img/pop-blow.png" data-fancybox="gallery"><img src="img/panel-noImage.png"></a>
-                            <p class="text_S text_bold">人名/人名/人名/人名/</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="mainbox bg_aquamarine" data-sal="slide-up" data-sal-duration="400" data-sal-delay="30" id="access">
-                <div class="wrapper">
-                    <h2 class="font_bold">アクセス</h2>
-                    <div class="wrapper_exptitle">
-                        <div class="clm2_left">
-                            <p class="text_bold text_S">大崎市民ギャラリー「緒絶の館」</p>
-                            <p class="text_bold text_S">〒989-6154 宮城県大崎市古川三日町1-1-1</p>
-                            <p class="text_bold text_S">TEL 0229-21-1466</p>
-                            <p class="text_S">古川ＩCより車で約10分</p>
-                            <p class="text_S">JR古川駅より徒歩約15分</p>
-                            <p class="text_S">仙台〜古川高速バス 最寄りのバス停</p>
-                            <p class="text_S">JRバス：古川十日町(徒歩5分)</p>
-                            <p class="text_S">宮城交通：七日町(徒歩3分)</p>
-                        </div>
-
-                        <div class="clm2_right">
-                            <div class="ggmap">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3119.1808108402943!2d140.95299481534093!3d38.575683879621536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f8912bb59f77473%3A0x23db873ba87de3bf!2z44CSOTg5LTYxNTQgTWl5YWdpLWtlbiwgxYxzYWtpLXNoaSwgRnVydWthd2FtaWtrYW1hY2hpLCAxIENob21l4oiSMeKIkjEg5aSn5bSO5biC5rCR44Ku44Oj44Op44Oq44O8!5e0!3m2!1sen!2sjp!4v1548164526624"
-                                    width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-            <div class="mainbox wrap nopadding" data-sal="fade" data-sal-duration="400" data-sal-delay="30" id="imagegallery">
-                <div class="clm3"><img src="img/7.jpg"></div>
-                <div class="clm3"><img src="img/8.jpg"></div>
-                <div class="clm3"><img src="img/9.jpg"></div>
-                <div class="clm3"><img src="img/10.jpg"></div>
-                <div class="clm3"><img src="img/11.jpg"></div>
-                <div class="clm3"><img src="img/12.jpg"></div>
-
-            </div>
-        </main>
-
-        <script>
-            if(!navigator.userAgent.match(/(iPhone|iPad|iPod|Android)/)){ //sp版ではパララックス無効に
-                var rellax = new Rellax('.rellax');
-            }
-        </script>
-        <script src="js/sal.js"></script>
-        <script>sal();</script>
-        <script src="js/jquery.fancybox.min.js"></script>
+      <script>
+        if (!navigator.userAgent.match(/(iPhone|iPad|iPod|Android)/)) {
+          //sp版ではパララックス無効に
+          var rellax = new Rellax(".rellax");
+        }
+      </script>
+      <script src="js/sal.js"></script>
+      <script>
+        sal();
+      </script>
+      <script src="js/jquery.fancybox.min.js"></script>
     </body>
-
+  </body>
 </html>
