ファーストビュー用の空間を作成

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   </head>
 
   <body onload="init()">
+    <header>
+      <div class="main_visual"></div>
+    </header>
     <body>
       <main>
         <div class="mainbox" id="abstract">
