メインビジュアルが表示できるようにheaderを調整

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
   <body onload="init()">
     <header>
-      <div class="main_visual"></div>
+      <div>
+        <img src="/img/main-visual.png" alt="">
+      </div>
     </header>
     <body>
       <main>
