画像の不具合を修正

--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
   </head>
 
   <body onload="init()">
-    <header>
-      <div>
-        <img src="/img/main-visual.png" alt="">
-      </div>
-    </header>
+    <header></header>
     <body>
       <main>
+        <div>
+          <img src="/img/main-visual.png" alt="" />
+        </div>
         <div class="mainbox" id="abstract">
           <div class="wrapper">
             <h2 class="font_bold">、と。展 (くとうてん)</h2>
