素材フォルダを用途別に分別。確実に使用しない素材を削除

--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@
   </head>
 
   <body onload="init()">
-    <header></header>
     <body>
       <main>
-        <div>
-          <img src="/img/main-visual.png" alt="" />
+        <div class="">
+          <div class="main_visual">
+            <img src="/img/main-visual.png" alt="" />
+          </div>
         </div>
         <div class="mainbox" id="abstract">
           <div class="wrapper">
-            <h2 class="font_bold">、と。展 (くとうてん)</h2>
+            <h2 class="font_bold">「、」と「。」展 (くとうてん)</h2>
 
             <div class="wrapper_exptitle">
               <div class="clm2_left">
@@ -56,8 +57,9 @@
                 </ul>
 
                 <p class="text_justify text_S">
-                  2023年度開催の「ゆらめくあわい」に引き続き、今年度も大崎市と宮城大学の連携協力事業、「、と。展」を開催します。<br />
-                  価値創造デザイン学類の学生が考案・制作した体験型メディアアートを、大崎市民ギャラリー「緒絶の館」に展示します。展示のテーマは、『人も、時間も、モノも、ちょっと止まってひとやすみ』。
+                  2023年度開催の「ゆらめくあわい」に引き続き、今年度も大崎市と宮城大学の連携協力事業、『「、」と「。」展』を開催します。<br />
+                  価値創造デザイン学類の学生が考案・制作した体験型メディアアートを、大崎市民ギャラリー「緒絶の館」に展示します。<br />
+                  展示のテーマは、『人も、時間も、モノも、ちょっと止まってひとやすみ』。
                 </p>
               </div>
 
@@ -95,17 +97,63 @@
         >
           <div class="wrapper">
             <h2 class="font_bold">展示作品</h2>
-            <p>ここに会場マップを入れる</p>
             <p>
-              <img src="img/map.png" usemap="#ImageMap" alt="会場マップ" style="width: 125%; margin: 0 -12.5%;">
+              <img
+                src="img/map.png"
+                usemap="#ImageMap"
+                alt="会場マップ"
+                style="width: 125%; margin: 0 -12.5%"
+              />
               <map name="ImageMap">
-                <area shape="rect" coords="62,281,180,415" href="img/pop-blow.png" alt="" data-fancybox="gallery"/>
-                <area shape="rect" coords="96,125,215,258" href="img/pop-color.png" alt="" data-fancybox="gallery"/>
-                <area shape="rect" coords="241,45,362,198" href="img/pop-control.png" alt="" data-fancybox="gallery"/>
-                <area shape="rect" coords="372,45,495,196" href="img/pop-link.png" alt="" data-fancybox="gallery"/>
-                <area shape="rect" coords="516,45,695,181" href="img/pop-memory.png" alt="" data-fancybox="gallery"/>
-                <area shape="rect" coords="371,333,643,449" href="img/pop-blow.png" alt="" data-fancybox="gallery"/>
-                <area shape="rect" coords="801,47,961,526" href="img/pop-color.png" alt="" data-fancybox="gallery"/>
+                <area
+                  shape="rect"
+                  coords="62,281,180,415"
+                  href="img/pop-blow.png"
+                  alt=""
+                  data-fancybox="gallery"
+                />
+                <area
+                  shape="rect"
+                  coords="96,125,215,258"
+                  href="img/pop-color.png"
+                  alt=""
+                  data-fancybox="gallery"
+                />
+                <area
+                  shape="rect"
+                  coords="241,45,362,198"
+                  href="img/pop-control.png"
+                  alt=""
+                  data-fancybox="gallery"
+                />
+                <area
+                  shape="rect"
+                  coords="372,45,495,196"
+                  href="img/pop-link.png"
+                  alt=""
+                  data-fancybox="gallery"
+                />
+                <area
+                  shape="rect"
+                  coords="516,45,695,181"
+                  href="img/pop-memory.png"
+                  alt=""
+                  data-fancybox="gallery"
+                />
+                <area
+                  shape="rect"
+                  coords="371,333,643,449"
+                  href="img/pop-blow.png"
+                  alt=""
+                  data-fancybox="gallery"
+                />
+                <area
+                  shape="rect"
+                  coords="801,47,961,526"
+                  href="img/pop-color.png"
+                  alt=""
+                  data-fancybox="gallery"
+                />
               </map>
             </p>
             <div class="wrapper_exptitle"></div>
