サイト中の画像を今年のものに差し替え

--- a/index.html
+++ b/index.html
@@ -89,20 +89,22 @@
         </div>
 
         <div
-          class="mainbox_large"
+          class="mainbox"
           data-sal="slide-up"
           data-sal-duration="400"
           data-sal-delay="30"
           id="works"
         >
           <div class="wrapper">
-            <h2 class="font_bold">展示作品</h2>
-            <p>
+            <div>
+              <h2 class="font_bold">展示作品</h2>
+            </div>
+            <div>
               <img
                 src="img/map.png"
                 usemap="#ImageMap"
                 alt="会場マップ"
-                style="width: 125%; margin: 0 -12.5%"
+                style="width: %; margin: 0 -12.5%"
               />
               <map name="ImageMap">
                 <area
@@ -155,7 +157,7 @@
                   data-fancybox="gallery"
                 />
               </map>
-            </p>
+            </div>
             <div class="wrapper_exptitle"></div>
           </div>
         </div>
@@ -167,12 +169,12 @@
           data-sal-delay="30"
           id="imagegallery"
         >
-          <div class="clm3"><img src="img/7.jpg" /></div>
-          <div class="clm3"><img src="img/8.jpg" /></div>
-          <div class="clm3"><img src="img/9.jpg" /></div>
-          <div class="clm3"><img src="img/10.jpg" /></div>
-          <div class="clm3"><img src="img/11.jpg" /></div>
-          <div class="clm3"><img src="img/12.jpg" /></div>
+          <div class="clm3"><img src="img/photos/photo_1.JPG" /></div>
+          <div class="clm3"><img src="img/photos/photo_6.JPG" /></div>
+          <div class="clm3"><img src="img/photos/photo_4.JPG" /></div>
+          <div class="clm3"><img src="img/photos/photo_3.JPG" /></div>
+          <div class="clm3"><img src="img/photos/photo_5.JPG" /></div>
+          <div class="clm3"><img src="img/photos/photo_2.JPG" /></div>
         </div>
 
         <div
