htmlファイルを直接開くとファーストビューが表示されない問題を修正 なお原因は画像パスの文頭にバックスラッシュ(/)がついていたこと きもすぎ

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   <body onload="init()">
     <body>
       <main>
-        <div class="">
+        <div class="mainbox">
           <div class="main_visual">
-            <img src="/img/main-visual.png" alt="" />
+            <img src="img/main-visual.png" />
           </div>
         </div>
         <div class="mainbox" id="abstract">
@@ -84,6 +84,7 @@
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen
+              style="margin: 1em, 1em"
             ></iframe>
           </div>
         </div>
@@ -104,7 +105,7 @@
                 src="img/map.png"
                 usemap="#ImageMap"
                 alt="会場マップ"
-                style="width: %; margin: 0 -12.5%"
+                style="width: 100%; margin: 1em 0em"
               />
               <map name="ImageMap">
                 <area
