--- a/index.html
+++ b/index.html
@@ -73,19 +73,22 @@
           </div>
         </div>
 
-        <div class="mainbox">
+        <div
+          class="mainbox"
+          data-sal="slide-up"
+          data-sal-duration="400"
+          data-sal-delay="30"
+        >
           <div class="wrapper">
-            <h2>テスト用に中村の動画を埋め込み</h2>
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube-nocookie.com/embed/6T0Q_O6TTsM?si=XHAhh-yaG6BUV2bL"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-              style="margin: 1em, 1em"
-            ></iframe>
+            <h2>紹介映像</h2>
+            <video
+              class="content"
+              src="video/video.mp4"
+              controls
+              autoplay
+              muted
+              playsinline
+            ></video>
           </div>
         </div>
 
@@ -100,12 +103,12 @@
             <div>
               <h2 class="font_bold">展示作品</h2>
             </div>
-            <div>
+            <div class="content">
               <img
                 src="img/map.png"
                 usemap="#ImageMap"
                 alt="会場マップ"
-                style="width: 100%; margin: 1em 0em"
+                style="width: 100%"
               />
               <map name="ImageMap">
                 <area
