キャプション画像を追加、掲載写真のアスペクト比を修正

--- a/index.html
+++ b/index.html
@@ -33,12 +33,16 @@
   <body onload="init()">
     <body>
       <main>
-        <div class="mainbox">
-          <div class="main_visual">
-            <img src="img/main-visual.png" />
-          </div>
+        <div class="main_visual">
+          <img src="img/main-visual.png" />
         </div>
-        <div class="mainbox" id="abstract">
+        <div
+          class="mainbox"
+          id="abstract"
+          data-sal="slide-up"
+          data-sal-duration="400"
+          data-sal-delay="30"
+        >
           <div class="wrapper">
             <h2 class="font_bold">「、」と「。」展 (くとうてん)</h2>
 
@@ -114,50 +118,50 @@
                 <area
                   shape="rect"
                   coords="62,281,180,415"
-                  href="img/pop-blow.png"
-                  alt=""
+                  href="img/exhibition/pop-TRYAngle.png"
+                  alt="チーム トライあんぐるの展示、「万華鏡」"
                   data-fancybox="gallery"
                 />
                 <area
                   shape="rect"
                   coords="96,125,215,258"
-                  href="img/pop-color.png"
-                  alt=""
+                  href="img/exhibition/pop-yuutsu.png"
+                  alt="チーム 憂鬱部クリエイターズの展示、「アンブレラン」"
                   data-fancybox="gallery"
                 />
                 <area
                   shape="rect"
                   coords="241,45,362,198"
-                  href="img/pop-control.png"
-                  alt=""
+                  href="img/exhibition/pop-airplane.png"
+                  alt="チーム かみひこうきの展示、「みずかがみ」"
                   data-fancybox="gallery"
                 />
                 <area
                   shape="rect"
                   coords="372,45,495,196"
-                  href="img/pop-link.png"
-                  alt=""
+                  href="img/exhibition/pop-Tam-Tam.png"
+                  alt="チーム タムタムの展示、「とまりあい」"
                   data-fancybox="gallery"
                 />
                 <area
                   shape="rect"
                   coords="516,45,695,181"
                   href="img/pop-memory.png"
-                  alt=""
+                  alt="チーム 124の展示、「エラクトーン」"
                   data-fancybox="gallery"
                 />
                 <area
                   shape="rect"
                   coords="371,333,643,449"
-                  href="img/pop-blow.png"
-                  alt=""
+                  href="img/exhibition/pop-shiomiso.png"
+                  alt="チーム しおみその展示、「はぐみー！」"
                   data-fancybox="gallery"
                 />
                 <area
                   shape="rect"
                   coords="801,47,961,526"
                   href="img/pop-color.png"
-                  alt=""
+                  alt="チーム Uターンラッシュの展示、「ぬりぬりぱにっく！」"
                   data-fancybox="gallery"
                 />
               </map>
