pc, spでマージンが異なる点を修正

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <p class="text_justify text_S">
                   2023年度開催の「ゆらめくあわい」に引き続き、今年度も大崎市と宮城大学の連携協力事業、『「、」と「。」展』を開催します。<br />
                   価値創造デザイン学類の学生が考案・制作した体験型メディアアートを、大崎市民ギャラリー「緒絶の館」に展示します。<br />
-                  展示のテーマは、『人も、時間も、モノも、ちょっと止まってひとやすみ』。
+                  展示のテーマは、『人も、時間も、モノも、ちょっと止まってひとやすみ』。<br />
                 </p>
               </div>
 
