マップを触ることを誘導するテキストを追加

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
           <div class="wrapper">
             <div>
               <h2 class="font_bold">展示作品</h2>
+              <p style="font-size: small">マップを触ってみると……？</p>
             </div>
             <div class="content">
               <img
