--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <area
                   shape="rect"
                   coords="801,47,961,526"
-                  href="img/pop-color.png"
+                  href="img/exhibition/pop-UturnRush.png"
                   alt="チーム Uターンラッシュの展示、「ぬりぬりぱにっく！」"
                   data-fancybox="gallery"
                 />
