エラクトーンのポップが表示されない問題を解消

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <area
                   shape="rect"
                   coords="591,58,793,203"
-                  href="img/pop-memory.png"
+                  href="img/exhibition/pop-124.png"
                   alt="チーム 124の展示、「エラクトーン」"
                   data-fancybox="gallery"
                 />
