途中写真無しのバージョンを作成

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           </div>
         </div>
 
-        <div
+        <!-- <div
           class="mainbox wrap nopadding"
           data-sal="fade"
           data-sal-duration="400"
@@ -185,7 +185,7 @@
           <div class="clm3"><img src="img/photos/photo_3.JPG" /></div>
           <div class="clm3"><img src="img/photos/photo_5.JPG" /></div>
           <div class="clm3"><img src="img/photos/photo_2.JPG" /></div>
-        </div>
+        </div> -->
 
         <div
           class="mainbox bg_aquamarine"
