--- a/index.html
+++ b/index.html
@@ -172,20 +172,20 @@
           </div>
         </div>
 
-        <!-- <div
+        <div
           class="mainbox wrap nopadding"
           data-sal="fade"
           data-sal-duration="400"
           data-sal-delay="30"
           id="imagegallery"
         >
-          <div class="clm3"><img src="img/photos/photo_1.JPG" /></div>
-          <div class="clm3"><img src="img/photos/photo_6.JPG" /></div>
-          <div class="clm3"><img src="img/photos/photo_4.JPG" /></div>
-          <div class="clm3"><img src="img/photos/photo_3.JPG" /></div>
-          <div class="clm3"><img src="img/photos/photo_5.JPG" /></div>
-          <div class="clm3"><img src="img/photos/photo_2.JPG" /></div>
-        </div> -->
+          <div class="clm3"><img src="img/photos/6.JPG" /></div>
+          <div class="clm3"><img src="img/photos/2.JPG" /></div>
+          <div class="clm3"><img src="img/photos/3.JPG" /></div>
+          <div class="clm3"><img src="img/photos/4.JPG" /></div>
+          <div class="clm3"><img src="img/photos/7.JPG" /></div>
+          <div class="clm3"><img src="img/photos/10.JPG" /></div>
+        </div>
 
         <div
           class="mainbox bg_aquamarine"
