--- a/index.html
+++ b/index.html
@@ -179,12 +179,12 @@
           data-sal-delay="30"
           id="imagegallery"
         >
-          <div class="clm3"><img src="img/photos/6.JPG" /></div>
-          <div class="clm3"><img src="img/photos/2.JPG" /></div>
-          <div class="clm3"><img src="img/photos/3.JPG" /></div>
-          <div class="clm3"><img src="img/photos/4.JPG" /></div>
-          <div class="clm3"><img src="img/photos/7.JPG" /></div>
-          <div class="clm3"><img src="img/photos/10.JPG" /></div>
+          <div class="clm3"><img src="img/photos/6.jpg" /></div>
+          <div class="clm3"><img src="img/photos/2.jpg" /></div>
+          <div class="clm3"><img src="img/photos/3.jpg" /></div>
+          <div class="clm3"><img src="img/photos/4.jpg" /></div>
+          <div class="clm3"><img src="img/photos/7.jpg" /></div>
+          <div class="clm3"><img src="img/photos/10.jpg" /></div>
         </div>
 
         <div
