展示会本番の写真を追加。サイトにも適用

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 alt="会場マップ"
                 style="width: 100%"
               />
-              
+
               <map name="ImageMap">
                 <area
                   shape="rect"
@@ -179,12 +179,12 @@
           data-sal-delay="30"
           id="imagegallery"
         >
-          <div class="clm3"><img src="img/photos/1.jpg" /></div>
-          <div class="clm3"><img src="img/photos/2.jpg" /></div>
-          <div class="clm3"><img src="img/photos/3.jpg" /></div>
-          <div class="clm3"><img src="img/photos/4.jpg" /></div>
-          <div class="clm3"><img src="img/photos/5.jpg" /></div>
-          <div class="clm3"><img src="img/photos/6.jpg" /></div>
+          <div class="clm3"><img src="img/photos/7.jpg" /></div>
+          <div class="clm3"><img src="img/photos/23.jpg" /></div>
+          <div class="clm3"><img src="img/photos/8.jpeg" /></div>
+          <div class="clm3"><img src="img/photos/9.jpg" /></div>
+          <div class="clm3"><img src="img/photos/13.jpg" /></div>
+          <div class="clm3"><img src="img/photos/14.jpg" /></div>
         </div>
 
         <div
