htmlに書かれた画像の拡張子を修正

--- a/index.html
+++ b/index.html
@@ -179,12 +179,12 @@
           data-sal-delay="30"
           id="imagegallery"
         >
-          <div class="clm3"><img src="img/photos/7.jpg" /></div>
-          <div class="clm3"><img src="img/photos/23.jpg" /></div>
+          <div class="clm3"><img src="img/photos/7.JPG" /></div>
+          <div class="clm3"><img src="img/photos/23.JPG" /></div>
           <div class="clm3"><img src="img/photos/8.jpeg" /></div>
-          <div class="clm3"><img src="img/photos/9.jpg" /></div>
-          <div class="clm3"><img src="img/photos/13.jpg" /></div>
-          <div class="clm3"><img src="img/photos/14.jpg" /></div>
+          <div class="clm3"><img src="img/photos/9.JPG" /></div>
+          <div class="clm3"><img src="img/photos/13.JPG" /></div>
+          <div class="clm3"><img src="img/photos/14.JPG" /></div>
         </div>
 
         <div
